--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="index.html">
                 <span class="my-nav-it">Home</span>
               </a>
             </li>
@@ -83,6 +83,9 @@
               >
             </li>
           </ul>
+
+          <button class="opts me-2" id="login-btn">login</button>
+          <button class="opts" id="signin-btn">sign in</button>
         </div>
       </div>
     </nav>
@@ -145,53 +148,6 @@
       >
         <span class="carousel-control-next-icon"></span>
       </a>
-    </div>
-
-    <div class="container-fluid head-cntr py-5">
-      <div class="container">
-        <div class="row mt-5">
-          <div class="col-4"><h2 class="text-center rough">heading 1</h2></div>
-          <div class="col-4"><h2 class="text-center rough">heading 1</h2></div>
-          <div class="col-4"><h2 class="text-center rough">heading 1</h2></div>
-
-          <div class="col-2 rough opt-ctnr"></div>
-
-          <div class="col-10 rough">
-            <div class="col-6 inp-cntr mt-5 hide mx-auto">
-              <input
-                class="form-inps"
-                placeholder="Enter Your Text"
-                type="text"
-              />
-              <input
-                class="form-inps"
-                placeholder="Enter Your Text"
-                type="text"
-              />
-              <input
-                class="form-inps"
-                placeholder="Enter Your Text"
-                type="text"
-              />
-              <input
-                class="form-inps"
-                placeholder="Enter Your Text"
-                type="text"
-              />
-              <input
-                class="form-inps"
-                placeholder="Enter Your Text"
-                type="text"
-              />
-              <input
-                class="form-inps"
-                placeholder="Enter Your Text"
-                type="text"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <footer>
