I completed the basic UI of this project.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
           class="collapse justify-content-end navbar-collapse"
           id="navbarSupportedContent"
         >
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-2"></div>
+        </div>
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">
@@ -83,6 +87,7 @@
               >
             </li>
           </ul>
+
 
           <button class="opts me-2" id="login-btn">login</button>
           <button class="opts" id="signin-btn">sign in</button>
