--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6 inp-cntr-login mt-5 mx-auto">
-          <form action="">
+          <form class="login-pg-form">
             <input
               class="form-inps"
               placeholder="Enter Your Text"
