--- a/index.html
+++ b/index.html
@@ -37,122 +37,45 @@
     <title>Pipe Portal</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+
+    <div class="container-fluid topbar py-4">
       <div class="container">
-        <a class="navbar-brand" href="#">Pipe</a>
-        <button
-          class="navbar-toggler"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div
-          class="collapse justify-content-end navbar-collapse"
-          id="navbarSupportedContent"
-        >
         <div class="row">
-          <div class="col-2"></div>
-          <div class="col-2"></div>
-        </div>
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">
-                <span class="my-nav-it">Home</span>
-              </a>
-            </li>
+          <div class="col-2 logo">
+            <h1>Logo</h1>
+          </div>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#"
-                ><span class="my-nav-it">about us</span></a
-              >
-            </li>
+          <div class="col-10 d-flex justify-content-end align-items-center tb-form">
+            <form class="home-f">
+              <label class="inp-lbl">Email</label>
+              <input type="email" class="login-inps" placeholder="enter your email">
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown">
-                <span class="my-nav-it">Dropdown</span>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
+              <label class="inp-lbl">Password</label>
+              <input type="password" class="login-inps" placeholder="enter your password">
 
-            <li class="nav-item">
-              <a class="nav-link" href="#"
-                ><span class="my-nav-it">contact us</span></a
-              >
-            </li>
-          </ul>
-
-
-          <button class="opts me-2" id="login-btn">login</button>
-          <button class="opts" id="signin-btn">sign in</button>
+              <input type="submit" class="sub-btn">
+            </form>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
 
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide my-carou"
-      data-bs-ride="carousel"
-    >
-      <ul class="carousel-indicators">
-        <li
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="0"
-          class="active"
-        ></li>
-        <li
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="1"
-        ></li>
-        <li
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="2"
-        ></li>
-      </ul>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="https://img.freepik.com/free-photo/construction-pvc-pipes-composition_23-2149106876.jpg?uid=R136142914&ga=GA1.1.1393488082.1712395958&semt=sph"
-            alt="First slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="https://img.freepik.com/premium-photo/stainless-steel-pipes-factory_863013-105610.jpg?uid=R136142914&ga=GA1.1.1393488082.1712395958&semt=sph"
-            alt="Second slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="https://img.freepik.com/premium-photo/detailed-view-collection-pipes-valves-suitable-industrial-mechanical-concepts_153912-184890.jpg?uid=R136142914&ga=GA1.1.1393488082.1712395958&semt=sph"
-            alt="Third slide"
-          />
+    <div class="container-fluid hero-sec">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 hero-t-sec d-flex justify-content-center align-items-center flex-column">
+            <div class="col-12">
+              <p class="hero-t">WE HAVE 150,000+ LIVE JOBS</p>
+            </div>
+            <p class="hero-t-2">Find your dream jobs with <span>Jobcy</span></p>
+            <p class="hero-t-3">Find jobs, create trackable resumes and enrich your applications.Carefully crafted after analyzing the needs of different industries.</p>
+          </div>
+
+          <div class="col-6 hero-img-sec">
+            <img src="https://themesdesign.in/jobcy-react/layout/assets/images/process-02.png" class="w-100" alt="hero section image">
+          </div>
         </div>
       </div>
-
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon"></span>
-      </a>
     </div>
 
     <footer>
