I changed the UI of this project.

--- a/dashbord.html
+++ b/dashbord.html
@@ -61,41 +61,58 @@
             <h2 class="text-center mt-5">Static Data</h2>
           </div>
 
-          <div class="col-2 rough opt-ctnr"></div>
+          <div class="col-3 opt-ctnr">
+            <div
+              class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column"
+            >
+              <button class="opts">main 1</button>
+            </div>
 
-          <div class="col-10 rough">
-            <div class="col-6 inp-cntr mt-5 hide mx-auto">
+            <div
+              class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column"
+            >
+              <button class="opts">main 2</button>
+            </div>
+
+            <div
+              class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column"
+            >
+              <button class="opts">main 3</button>
+            </div>
+          </div>
+
+          <div class="col-9 hide inp-cntr">
+            <div class="col-12 db-left-sec">
               <form action="">
-                <input
-                  class="form-inps"
-                  placeholder="Enter Your Text"
-                  type="text"
-                />
-                <input
-                  class="form-inps"
-                  placeholder="Enter Your Text"
-                  type="text"
-                />
-                <input
-                  class="form-inps"
-                  placeholder="Enter Your Text"
-                  type="text"
-                />
-                <input
-                  class="form-inps"
-                  placeholder="Enter Your Text"
-                  type="text"
-                />
-                <input
-                  class="form-inps"
-                  placeholder="Enter Your Text"
-                  type="text"
-                />
-                <input
-                  class="form-inps"
-                  placeholder="Enter Your Text"
-                  type="text"
-                />
+                <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+                  <input
+                    class="form-inps"
+                    placeholder="Enter Your Text"
+                    type="text"
+                  />
+                  <input
+                    class="form-inps"
+                    placeholder="Enter Your Text"
+                    type="text"
+                  />
+                </div>
+
+                <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+                  <input
+                    class="form-inps"
+                    placeholder="Enter Your Text"
+                    type="text"
+                  />
+                  <input
+                    class="form-inps"
+                    placeholder="Enter Your Text"
+                    type="text"
+                  />
+                </div>
+
+                <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+                  <textarea placeholder="Enter Your Text" rows="5" class="form-inps"></textarea>
+                </div>
               </form>
             </div>
           </div>
