I changed the form of this project.

--- a/dashbord.html
+++ b/dashbord.html
@@ -1,171 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+  <link rel="stylesheet" href="style.css" />
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
 
-    <title>Pipe Portal Dashboard</title>
-  </head>
-  <body>
-    <div class="container-fluid head-cntr py-5">
-      <div class="container">
-        <div class="row mt-5">
-          <div class="col-4">
-            <div class="col-12 dash-col">
-              <h2 class="text-center">dynamic data</h2>
-            </div>
-            <h2 class="text-center mt-5">Static Data</h2>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <title>Pipe Portal Dashboard</title>
+</head>
+
+<body>
+  <div class="container-fluid rough head-cntr py-5">
+    <div class="container">
+      <div class="row d-flex justify-content-center align-items-center mt-5">
+        <div class="col-2">
+          <div class="col-12 dash-col">
+            <h2 class="text-center">dynamic data</h2>
           </div>
+          <h2 class="text-center mt-5">Static Data</h2>
+        </div>
 
-          <div class="col-4">
-            <div class="col-12 dash-col">
-              <h2 class="text-center">dynamic data</h2>
-            </div>
-            <h2 class="text-center mt-5">Static Data</h2>
+        <div class="col-2">
+          <div class="col-12 dash-col">
+            <h2 class="text-center">dynamic data</h2>
           </div>
+          <h2 class="text-center mt-5">Static Data</h2>
+        </div>
 
-          <div class="col-4">
-            <div class="col-12 dash-col">
-              <h2 class="text-center">dynamic data</h2>
-            </div>
-            <h2 class="text-center mt-5">Static Data</h2>
+        <div class="col-2">
+          <div class="col-12 dash-col">
+            <h2 class="text-center">dynamic data</h2>
           </div>
+          <h2 class="text-center mt-5">Static Data</h2>
+        </div>
+      </div>
 
+      <div class="row pt-5">
+        
           <div class="col-3 opt-ctnr">
-            <div
-              class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column"
-            >
-              <button class="opts">main 1</button>
+            <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
+              <button class="opts">vender</button>
             </div>
 
-            <div
-              class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column"
-            >
-              <button class="opts">main 2</button>
+            <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
+              <button class="opts">client</button>
             </div>
 
-            <div
-              class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column"
-            >
-              <button class="opts">main 3</button>
+            <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
+              <button class="opts">payroll</button>
             </div>
           </div>
+        
 
-          <div class="col-9 hide inp-cntr">
-            <div class="col-12 db-left-sec">
-              <form action="">
-                <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-                  <input
-                    class="form-inps"
-                    placeholder="Enter Your Text"
-                    type="text"
-                  />
-                  <input
-                    class="form-inps"
-                    placeholder="Enter Your Text"
-                    type="text"
-                  />
-                </div>
+        <div class="col-9 hide inp-ctnr">
+          <div class="col-12 db-left-sec">
+            <form action="">
+              <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+                <input class="form-inps" placeholder="Enter Your Text" type="text" />
+                <input class="form-inps" placeholder="Enter Your Text" type="text" />
+              </div>
 
-                <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-                  <input
-                    class="form-inps"
-                    placeholder="Enter Your Text"
-                    type="text"
-                  />
-                  <input
-                    class="form-inps"
-                    placeholder="Enter Your Text"
-                    type="text"
-                  />
-                </div>
+              <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+                <input class="form-inps" placeholder="Enter Your Text" type="text" />
+                <input class="form-inps" placeholder="Enter Your Text" type="text" />
+              </div>
 
-                <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-                  <textarea placeholder="Enter Your Text" rows="5" class="form-inps"></textarea>
-                </div>
-              </form>
-            </div>
+              <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+                <textarea placeholder="Enter Your Text" rows="5" class="form-inps"></textarea>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  </div>
 
-    <footer>
-      <div class="container-fuid py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-3">
-              <h1 class="ftr-logo mb-5">logo</h1>
-              <h4 class="ftr-heads mb-3">follow us</h4>
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-linkedin"></i>
-              <i class="fa-brands fa-instagram"></i>
-            </div>
+  <script type="module" src="app.js"></script>
+</body>
 
-            <div class="col-3">
-              <h4 class="ftr-heads">quick links</h4>
-              <p class="ftr-t">home</p>
-              <p class="ftr-t">about us</p>
-              <p class="ftr-t">services</p>
-              <p class="ftr-t">contact us</p>
-            </div>
-
-            <div class="col-3">
-              <h4 class="ftr-heads">our services</h4>
-              <p class="ftr-t">services 1</p>
-              <p class="ftr-t">services 2</p>
-              <p class="ftr-t">services 3</p>
-              <p class="ftr-t">services 4</p>
-            </div>
-
-            <div class="col-3">
-              <h4 class="ftr-heads">address</h4>
-              <p class="ftr-t">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repudiandae, saepe!
-              </p>
-
-              <h4 class="ftr-heads">email</h4>
-              <p class="ftr-t">demo@gmail.com</p>
-
-              <h4 class="ftr-heads">phone number</h4>
-              <p class="ftr-t">0914-1234567</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <script type="module" src="app.js"></script>
-  </body>
 </html>
