--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <title>Pipe Portal</title>
   </head>
-  <body>
+  <body class="h-body">
 
     <div class="container-fluid topbar py-4">
       <div class="container">
@@ -60,69 +60,7 @@
       </div>
     </div>
 
-    <div class="container-fluid hero-sec">
-      <div class="container">
-        <div class="row">
-          <div class="col-6 hero-t-sec d-flex justify-content-center align-items-center flex-column">
-            <div class="col-12">
-              <p class="hero-t">WE HAVE 150,000+ LIVE JOBS</p>
-            </div>
-            <p class="hero-t-2">Find your dream jobs with <span>Jobcy</span></p>
-            <p class="hero-t-3">Find jobs, create trackable resumes and enrich your applications.Carefully crafted after analyzing the needs of different industries.</p>
-          </div>
-
-          <div class="col-6 hero-img-sec">
-            <img src="https://themesdesign.in/jobcy-react/layout/assets/images/process-02.png" class="w-100" alt="hero section image">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <div class="container-fuid py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-3">
-              <h1 class="ftr-logo mb-5">logo</h1>
-              <h4 class="ftr-heads mb-3">follow us</h4>
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-linkedin"></i>
-              <i class="fa-brands fa-instagram"></i>
-            </div>
-
-            <div class="col-3">
-              <h4 class="ftr-heads">quick links</h4>
-              <p class="ftr-t">home</p>
-              <p class="ftr-t">about us</p>
-              <p class="ftr-t">services</p>
-              <p class="ftr-t">contact us</p>
-            </div>
-
-            <div class="col-3">
-              <h4 class="ftr-heads">our services</h4>
-              <p class="ftr-t">services 1</p>
-              <p class="ftr-t">services 2</p>
-              <p class="ftr-t">services 3</p>
-              <p class="ftr-t">services 4</p>
-            </div>
-
-            <div class="col-3">
-              <h4 class="ftr-heads">address</h4>
-              <p class="ftr-t">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repudiandae, saepe!
-              </p>
-
-              <h4 class="ftr-heads">email</h4>
-              <p class="ftr-t">demo@gmail.com</p>
-
-              <h4 class="ftr-heads">phone number</h4>
-              <p class="ftr-t">0914-1234567</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    
 
     <script type="module" src="app.js"></script>
   </body>
