--- a/dashbord.html
+++ b/dashbord.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <div class="container-fluid rough head-cntr py-5">
+  <div class="container-fluid head-cntr py-5">
     <div class="container">
       <div class="row d-flex justify-content-center align-items-center mt-5">
         <div class="col-2">
