I again changed the UI according to the client.

--- a/dashbord.html
+++ b/dashbord.html
@@ -27,66 +27,64 @@
 </head>
 
 <body>
-  <div class="container-fluid head-cntr py-5">
-    <div class="container">
-      <div class="row d-flex justify-content-center align-items-center mt-5">
-        <div class="col-2">
-          <div class="col-12 dash-col">
-            <h2 class="text-center">dynamic data</h2>
-          </div>
-          <h2 class="text-center mt-5">Static Data</h2>
+  <div class="container-fluid">
+    <div class="row head-cntr">
+
+      <div class="col-2 opt-ctnr">
+        <div class="col-12 d-flex justify-content-center align-items-center flex-column">
+          <button class="opts">vender</button>
         </div>
 
-        <div class="col-2">
-          <div class="col-12 dash-col">
-            <h2 class="text-center">dynamic data</h2>
-          </div>
-          <h2 class="text-center mt-5">Static Data</h2>
+        <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
+          <button class="opts">client</button>
         </div>
 
-        <div class="col-2">
-          <div class="col-12 dash-col">
-            <h2 class="text-center">dynamic data</h2>
-          </div>
-          <h2 class="text-center mt-5">Static Data</h2>
+        <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
+          <button class="opts">payroll</button>
         </div>
       </div>
 
-      <div class="row pt-5">
-        
-          <div class="col-3 opt-ctnr">
-            <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
-              <button class="opts">vender</button>
-            </div>
 
-            <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
-              <button class="opts">client</button>
+      <div class="col-10 inp-ctnr">
+        <div class="row">
+          <div class="col-2">
+            <div class="col-12 dash-col">
+              <h2 class="text-center">dynamic data</h2>
             </div>
-
-            <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
-              <button class="opts">payroll</button>
-            </div>
+            <h2 class="text-center mt-5">Static Data</h2>
           </div>
-        
 
-        <div class="col-9 hide inp-ctnr">
-          <div class="col-12 db-left-sec">
-            <form action="">
-              <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-                <input class="form-inps" placeholder="Enter Your Text" type="text" />
-                <input class="form-inps" placeholder="Enter Your Text" type="text" />
-              </div>
-
-              <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-                <input class="form-inps" placeholder="Enter Your Text" type="text" />
-                <input class="form-inps" placeholder="Enter Your Text" type="text" />
-              </div>
-
-              <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-                <textarea placeholder="Enter Your Text" rows="5" class="form-inps"></textarea>
-              </div>
-            </form>
+          <div class="col-2">
+            <div class="col-12 dash-col">
+              <h2 class="text-center">dynamic data</h2>
+            </div>
+            <h2 class="text-center mt-5">Static Data</h2>
           </div>
+
+          <div class="col-2">
+            <div class="col-12 dash-col">
+              <h2 class="text-center">dynamic data</h2>
+            </div>
+            <h2 class="text-center mt-5">Static Data</h2>
+          </div>
+        </div>
+
+        <div class="col-12 db-left-sec">
+          <form action="">
+            <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+              <input class="form-inps" placeholder="Enter Your Text" type="text" />
+              <input class="form-inps" placeholder="Enter Your Text" type="text" />
+            </div>
+
+            <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+              <input class="form-inps" placeholder="Enter Your Text" type="text" />
+              <input class="form-inps" placeholder="Enter Your Text" type="text" />
+            </div>
+
+            <div class="col-12 d-flex justify-content-between align-items-center gap-3">
+              <textarea placeholder="Enter Your Text" rows="5" class="form-inps"></textarea>
+            </div>
+          </form>
         </div>
       </div>
     </div>
