--- a/dashbord.html
+++ b/dashbord.html
@@ -28,11 +28,10 @@
 
 <body>
   <div class="container-fluid">
-    <div class="row head-cntr">
-
-      <div class="col-2 opt-ctnr">
+    <div class="row head-ctnr">
+      <div class="col-2 d-flex justify-content-center align-items-center flex-column gap-5 opt-ctnr">
         <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-          <button class="opts">vender</button>
+          <button class="opts">vendor</button>
         </div>
 
         <div class="col-12 main-opts-ctnr d-flex justify-content-center align-items-center flex-column">
@@ -45,28 +44,9 @@
       </div>
 
 
-      <div class="col-10 inp-ctnr">
+      <div class="col-10 hide inp-ctnr">
+        <div class="col-12 graph-ctnr d-flex justify-content-between align-items-baseline"></div>
         <div class="row">
-          <div class="col-2">
-            <div class="col-12 dash-col">
-              <h2 class="text-center">dynamic data</h2>
-            </div>
-            <h2 class="text-center mt-5">Static Data</h2>
-          </div>
-
-          <div class="col-2">
-            <div class="col-12 dash-col">
-              <h2 class="text-center">dynamic data</h2>
-            </div>
-            <h2 class="text-center mt-5">Static Data</h2>
-          </div>
-
-          <div class="col-2">
-            <div class="col-12 dash-col">
-              <h2 class="text-center">dynamic data</h2>
-            </div>
-            <h2 class="text-center mt-5">Static Data</h2>
-          </div>
         </div>
 
         <div class="col-12 db-left-sec">
