--- a/dashbord.html
+++ b/dashbord.html
@@ -44,12 +44,10 @@
       </div>
 
 
-      <div class="col-10 hide inp-ctnr">
+      <div class="col-10">
         <div class="col-12 graph-ctnr d-flex justify-content-between align-items-baseline"></div>
-        <div class="row">
-        </div>
-
-        <div class="col-12 db-left-sec">
+        
+        <div class="col-12 hide inp-ctnr">
           <form action="">
             <div class="col-12 d-flex justify-content-between align-items-center gap-3">
               <input class="form-inps" placeholder="Enter Your Text" type="text" />
