--- a/dashbord.html
+++ b/dashbord.html
@@ -45,8 +45,17 @@
 
 
       <div class="col-10">
-        <div class="col-12 graph-ctnr d-flex justify-content-between align-items-baseline"></div>
-        
+        <div class="row">
+          <div class="col-6 graph-ctnr d-flex justify-content-between align-items-baseline p-5">
+            <canvas id="barchart"></canvas>
+          </div>
+  
+          <div class="col-6 graph-ctnr-2 d-flex justify-content-between align-items-baselin p-5">
+            <canvas id="doughnut"></canvas>
+          </div>
+        </div>
+
+
         <div class="col-12 hide inp-ctnr">
           <form action="">
             <div class="col-12 d-flex justify-content-between align-items-center gap-3">
@@ -69,6 +78,7 @@
   </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 
