--- a/dashbord.html
+++ b/dashbord.html
@@ -46,12 +46,16 @@
 
       <div class="col-10">
         <div class="row">
-          <div class="col-6 graph-ctnr d-flex justify-content-between align-items-baseline p-5">
-            <canvas id="barchart"></canvas>
+          <div class="col-6 graph-ctnr d-flex justify-content-between align-items-baseline">
+            <div class="col-12">
+              <canvas id="barchart"></canvas>
+            </div>
           </div>
   
-          <div class="col-6 graph-ctnr-2 d-flex justify-content-between align-items-baselin p-5">
-            <canvas id="doughnut"></canvas>
+          <div class="col-6 graph-ctnr-2 d-flex justify-content-between align-items-baselin">
+            <div class="col-12">
+              <canvas id="doughnut"></canvas>
+            </div>
           </div>
         </div>
 
