I printed all the forms according to every button through JavaScript.

--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
 
 <!-- home page or login page -->
 
-    <div class="container-fluid topbar py-4">
+    <div class="container-fluid topbar">
       <div class="container">
         <div class="row">
-          <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-2 logo">
-            <h1>Logo</h1>
+          <div class="col-xxl-1 col-xl-1 col-lg-2 col-md-2 col-sm-2 logo">
+            <img src="img/final logo pvc pipe factory.png" class="w-100" alt="brand logo">
           </div>
 
-          <div class="col-xxl-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 tb-form">
+          <div class="col-xxl-11 col-xl-10 col-lg-10 col-md-10 col-sm-10 tb-form">
             <form class="home-f">
               <label class="inp-lbl">Email</label>
-              <input type="email" class="login-inps" placeholder="your email">
+              <input type="email" class="login-inps" placeholder="your email" id="email-inp">
 
               <label class="inp-lbl">Password</label>
-              <input type="password" class="login-inps" placeholder="your password">
+              <input type="password" class="login-inps" placeholder="your password" id="pswd-inp">
 
-              <button class="sub-btn">Submit</button>
+              <button class="sub-btn" id="submit-btn">Submit</button>
             </form>
           </div>
         </div>
