--- a/dashbord.html
+++ b/dashbord.html
@@ -139,21 +139,9 @@
         </div>
 
 
-        <div class="col-12 hide inp-ctnr">
-          <form action="">
-            <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-              <input class="form-inps" placeholder="Enter Your Text" type="text" />
-              <input class="form-inps" placeholder="Enter Your Text" type="text" />
-            </div>
-
-            <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-              <input class="form-inps" placeholder="Enter Your Text" type="text" />
-              <input class="form-inps" placeholder="Enter Your Text" type="text" />
-            </div>
-
-            <div class="col-12 d-flex justify-content-between align-items-center gap-3">
-              <textarea placeholder="Enter Your Text" rows="5" class="form-inps"></textarea>
-            </div>
+        <div class="col-12 inp-ctnr">
+          <h1 class="my-5 d-form-head"></h1>
+          <form class="d-form">
           </form>
         </div>
       </div>
