I implemented some code.

--- a/dashbord.html
+++ b/dashbord.html
@@ -40,6 +40,8 @@
             <i class="fa-solid fa-user-plus dshbd-icon" id="vendor-icon"></i>
             <span>vendor</span>
           </button>
+          
+          <div class="sub-opt-ctnr"></div>
         </div>
 
         <div class="col-12 p-0 opt-ctnr-inner">
@@ -47,6 +49,8 @@
             <i class="fa-solid fa-users dshbd-icon" id="client-icon"></i>
             <span>client</span>
           </button>
+
+          <div class="sub-opt-ctnr"></div>
         </div>
 
         <div class="col-12 p-0 opt-ctnr-inner">
@@ -54,6 +58,8 @@
             <i class="fa-solid fa-user-pen dshbd-icon" id="payroll-icon"></i>
             <span>payroll</span>
           </button>
+
+          <div class="sub-opt-ctnr"></div>
         </div>
       </div>
       <!-- dashboard buttons container end-->
