--- a/add product.html
+++ b/add product.html
@@ -109,7 +109,7 @@
             </tbody>
           </table>
 
-          <div class="col-12 added-data-ctnr d-flex justify-content-between align-items-center"></div>
+          <div class="col-12 added-data-ctnr"></div>
         </form>
       </section>
     </div>
