--- a/add vendor.html
+++ b/add vendor.html
@@ -99,7 +99,7 @@
           </tbody>
         </table>
 
-        <div class="col-12 added-data-ctnr d-flex justify-content-between align-items-center"></div>
+        <div class="col-12 added-data-ctnr"></div>
       </form>
     </div>
   </body>
